[workspace]
members = [
    "src/gc-arena-derive/",
    "src/gc-arena/",
    "src/gc-sequence/",
]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/Freax13/proc-macro2", branch = "readd-wasm" }
syn = { git = "https://github.com/Freax13/syn", branch = "readd-proc-macro-wasm" }
synstructure = { git = "https://github.com/jac3km4/synstructure", branch = "wasm" }
